--- a/templates/partials/_companiesArrowTable.html
+++ b/templates/partials/_companiesArrowTable.html
@@ -18,8 +18,13 @@
              <th class="text-center text-xxs" style="wpkth: auto;">
 التغير            </th>
              <th class="text-center text-xxs" style="wpkth: auto;">
-عدد الأسهم           </th>
-                                   {% if request.user.is_emp or request.user.is_admin   %}
+  
+                القيمة السوقية            
+            <p class="text-xxs text-muted">القيمة السوقية بالمليون ريال</p>
+            </th>
+
+                               
+                {% if request.user.is_emp or request.user.is_admin   %}
               <th class="text-center text-xxs" style="wpkth: auto;">
                     </th>
                    <th class="text-center text-xxs" style="wpkth: auto;">
