--- a/templates/partials/_companyArrowsOwnersTable.html
+++ b/templates/partials/_companyArrowsOwnersTable.html
@@ -40,14 +40,14 @@
                         </a>
                     </td>
                     <td class="align-middle text-center text-xxs">
-                        <p class="text-xxs  mb-0 text-black-50">{{ item.ownRatio | intcomma}} %</p>
+                        <p class="text-xxs  mb-0 text-black-50">{{ item.ownRatio}} %</p>
                     </td>
                     <td class="align-middle text-center text-xxs">
-                        <p class="text-xxs  mb-0 text-black-50">{{ item.numberOFArrows | intcomma  }}</p>
+                        <p class="text-xxs  mb-0 text-black-50">{{ item.numberOFArrows   }}</p>
 
                     </td>
                     <td class="align-middle text-center text-xxs">
-                     <p class="text-xxs">{{ item.company.arrow_value | intcomma  }}</p>
+                     <p class="text-xxs">{{ item.company.arrow_value   }}</p>
                     </td>
                    <td class="align-middle text-center text-xxs">
                      <p class="text-xxs">{{ item.TotalArrowPrice | intcomma  }}</p>
