--- a/templates/partials/_companyRateAnalystTable.html
+++ b/templates/partials/_companyRateAnalystTable.html
@@ -59,10 +59,10 @@
                                             <p class="text-xxs  mb-0">{{ item.get_Recommendation_display }}</p>
                                         </td>
                                         <td class="align-middle text-center text-xxs">
-                                            <p class="text-xxs  mb-0">{{ item.CurrenncyValue | intcomma }}</p>
+                                            <p class="text-xxs  mb-0">{{ item.CurrenncyValue }}</p>
                                         </td>
                                         <td class="align-middle text-center text-xxs">
-                                            <p class="text-xxs  mb-0">{{ item.FairValue | intcomma }}</p>
+                                            <p class="text-xxs  mb-0">{{ item.FairValue }}</p>
                                         </td>
                                         <td class="align-middle text-center text-xxs">
                                             {% if item.changeFair %}
