--- a/templates/partials/_rateMoreDetails.html
+++ b/templates/partials/_rateMoreDetails.html
@@ -59,37 +59,37 @@
                                                         <p class="text-xxs  mb-0">{{ item.get_Recommendation_display }}</p>
                                                     </td>
                                                     <td class="align-middle text-center text-xxs">
-                                                        <p class="text-xxs  mb-0">{{ item.CurrenncyValue | intcomma  }}</p>
+                                                        <p class="text-xxs  mb-0">{{ item.CurrenncyValue   }}</p>
                                                     </td>
                                                     <td class="align-middle text-center text-xxs">
-                                                        <p class="text-xxs  mb-0">{{ item.FairValue | intcomma  }}</p>
+                                                        <p class="text-xxs  mb-0">{{ item.FairValue  }}</p>
                                                     </td>
                                                     <td class="align-middle text-center text-xxs">
                                                        {% if item.fair_percentage < 0 %}
                                                            <div class="d-flex justify-content-around">
                                                            <i class="fas fa-arrow-down text-xxs text-danger"></i>
-                                                           <p class="text-xxs text-danger  mb-0">{{ item.fair_percentage |floatformat:2|intcomma  }}</p>
+                                                           <p class="text-xxs text-danger  mb-0">{{ item.fair_percentage |floatformat:2  }}</p>
                                                            </div>
                                                         {% else %}
                                                            <div class="d-flex justify-content-around">
                                                            <i class="fas fa-arrow-up text-xxs text-success"></i>
-                                                           <p class="text-xxs text-success  mb-0">{{ item.fair_percentage |floatformat:2|intcomma  }}</p>
+                                                           <p class="text-xxs text-success  mb-0">{{ item.fair_percentage |floatformat:2  }}</p>
                                                            </div>
                                                        {% endif %}
                                                     </td>
                                                     <td class="align-middle text-center text-xxs">
-                                                        <p class="text-xxs  mb-0">{{ item.MarketValue | intcomma  }}</p>
+                                                        <p class="text-xxs  mb-0">{{ item.CompanyEntered.arrow_value   }}</p>
                                                     </td>
                                                     <td class="align-middle text-center text-xxs">
                                                        {% if item.market_percentage < 0 %}
                                                           <div class="d-flex justify-content-around">
                                                             <i class="fas fa-arrow-down text-xxs text-danger"></i>
-                                                           <p class="text-xxs text-danger  mb-0">{{ item.market_percentage |floatformat:2|intcomma  }}</p>
+                                                           <p class="text-xxs text-danger  mb-0">{{ item.market_percentage |floatformat:2  }}</p>
                                                           </div>
                                                         {% else %}
                                                           <div class="d-flex justify-content-around">
                                                            <i class="fas fa-arrow-up text-xxs text-success"></i>
-                                                           <p class="text-xxs text-success  mb-0">{{ item.market_percentage |floatformat:2|intcomma  }}</p>
+                                                           <p class="text-xxs text-success  mb-0">{{ item.market_percentage |floatformat:2  }}</p>
                                                           </div>
                                                        {% endif %}
                                                     </td>
