--- a/userInterface/templates/userInterface/expectreal-list.html
+++ b/userInterface/templates/userInterface/expectreal-list.html
@@ -54,7 +54,9 @@
                         <div class="col-lg-6 pt-2">
                     <div class="card z-index-0 mx-auto box-shadow h-100">
                         <div class="card-header pt-6">
-                            <div class="col-12 justify-content-center">
+                            <div class="col-12 justify-content-center pt-4">
+                                <p>                أكثر 5 شركات قربا للتوقعات
+                                </p>
                             </div>
                         </div>
                         <div class="card-body justify-content-center">
@@ -67,7 +69,7 @@
                                 <div class="col-lg-6 pt-2">
                     <div class="card z-index-0 mx-auto box-shadow">
                         <div class="card-header">
-                            <div class="col-12 justify-content-center">
+                            <div class="col-12 justify-content-center ">
                                 <p>أكثر 5 شركات حيث الأرباح الفعلية</p>
                             </div>
                         </div>
@@ -85,6 +87,8 @@
                     <div class="card z-index-0 mx-auto box-shadow h-100">
                         <div class="card-header pt-6">
                             <div class="col-12 justify-content-center">
+                                <p>أكثر 5 شركات من حيث الأرباح فى الربع الثانى 2020 </p>
+
                             </div>
                         </div>
                         <div class="card-body justify-content-center">
@@ -97,7 +101,7 @@
                                 <div class="col-lg-6 pt-2">
                     <div class="card z-index-0 mx-auto box-shadow h-100">
                         <div class="card-header">
-                            <div class="col-12 justify-content-center">
+                            <div class="col-12 justify-content-center pt-4">
                                 <p>أكثر 5 شركات من حيث الأرباح فى الربع الثالث 2020 </p>
                             </div>
                         </div>
@@ -125,7 +129,6 @@
                 backgroundColor: [
                     '#696969', '#A9942A', '#696969', '#A9942A', '#D3D3D3'
                 ],
-                label: 'أكثر 5 شركات قربا للتوقعات'
             }],
             labels: {{ expectlabel|safe }}
         },
@@ -134,7 +137,15 @@
                 line: {
                     borderWidth: 3
                 }
-            }
+            },
+            tooltips: {
+                callbacks: {
+                   title: function() {}
+                }
+             },
+             legend: {
+                display: false
+              },
         }
     }
     var rateFair1_config = {
@@ -164,7 +175,6 @@
                 backgroundColor: [
                     '#696969', '#A9942A', '#696969', '#A9942A', '#D3D3D3'
                 ],
-                label: ' أكثر 5 شركات من حيث الأرباح فى الربع الثانى 2020'
 
             }],
             labels: {{ expectlabel2|safe }}
@@ -174,7 +184,15 @@
                 line: {
                     borderWidth: 3
                 }
-            }
+            },
+            tooltips: {
+                callbacks: {
+                   title: function() {}
+                }
+             },
+             legend: {
+                display: false
+              },
         }
     }
     var configCompany = {
